--- a/jumns/pubspec.yaml
+++ b/jumns/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   amazon_cognito_identity_dart_2: 3.6.0
   flutter_secure_storage: 9.2.4
   purchases_flutter: ^9.12.0
+  url_launcher: ^6.2.0
 
 dev_dependencies:
   flutter_test:
