--- a/jumns/pubspec.yaml
+++ b/jumns/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   flutter_secure_storage: 9.2.4
   purchases_flutter: ^9.12.0
   url_launcher: ^6.2.0
+  image_picker: ^1.1.2
+  speech_to_text: ^7.0.0
 
 dev_dependencies:
   flutter_test:
